# bamboo

./: .flake8  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json  install.sh
.github/workflows/: ci.yml
bamboo/: __init__.py  _basics.py  _decorator.py  _exception.py  _objects.py  _validation.py
examples/: beartyped_columns.py  default_typed.py  default_untyped.py  tqdm_swifter.py  vectorized_validate.py
tests/: test_bamboo.py  test_bamboo_beartype.py  test_bamboo_object.py  test_bamboo_swifter.py  test_bamboo_tqdm.py  test_bamboo_transform.py  test_examples_run.py  test_validate.py
